# CursorTestFastAPI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  schemas.py  settings.py
app/: __init__.py  main.py
